# ScanApp

./: .gitignore  123  CMakeLists.txt  CMakeSettings.json  README.md
src/: CMakeLists.txt
src/MainApp/: CMakeLists.txt  main.cpp
src/MainApp/CareRay/: CareRayServer.cpp  CareRayServer.h  CareRayServerWidget.cpp  CareRayServerWidget.h  CareRayServerWidget.ui  RpcStruct.hpp  ZmqPublisher.cpp  ZmqPublisher.h
src/MainApp/CareRay/include/: CareRayAPI.h  CrStructure.h  IntlMsgAliasID.h
src/MainApp/CareRay/lib/x64/: CRInterface.lib  CareRayApi.lib
src/MainApp/CareRay/lib/x64/410/: CrApi.lib
src/MainApp/CareRay/lib/x64/510/: CRInterface.lib
src/MainApp/CareRay/lib/x86/: CRInterface.lib  CareRayApi.lib
src/MainApp/CareRay/lib/x86/410/: CrApi.lib
src/MainApp/CareRay/lib/x86/510/: CRInterface.lib
